# GrammarChecker

./: .env.example  .gitignore  AGENTS.md  README.md  build_ngram_model.py  examples.py  export_csv.py  main.py  pyproject.toml  pytest.ini
core/: grammar_checker.py  ngram_storage.py  word_integration.py
tests/: __init__.py  conftest.py
tests/grammar/: test_checker.py
tests/ngram/: test_storage.py
utils/: perf_timer.py
